Fixed text alignment to longer wrap around image

--- a/chromeExtension/hovercraft.css
+++ b/chromeExtension/hovercraft.css
@@ -5,21 +5,16 @@
     font-weight: 300;
     font-size: 16px;
     position: absolute;
-    /* top: 0; */
-    /* left: 0; */
     z-index: 999999;
+    display: table;
 }
 
-.HovercraftTooltip p {
+.HovercraftTooltip div.table-row {
     min-width: 200px;
-    opacity: 0;
-    display: inline-block;
-    visibility: hidden;
+    display: table-row;
     position: absolute;
     text-align: left;
     width: auto;
-    background: #67C8EA;
-    color: #ffffff;
     font-size: 1rem;
     line-height: 1.2;
     padding: 10px;
@@ -27,18 +22,17 @@
     white-space: normal;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
     transition: all 0.2s ease-out;
-}
-
-.HovercraftTooltip p.OnTop {
     top: -5px;
     left: 50%;
-}
-
-.HovercraftTooltip p {
     visibility: visible;
     opacity: 1;
 }
 
+.HovercraftTooltip div.table-cell {
+    display: table-cell;
+    vertical-align: top;
+}
+
 .HovercraftTooltips span {
-    white-space:nowrap;
+    white-space: nowrap;
 }
